@@ -57,7 +57,8 @@ namespace MonoDevelop.Ide.Commands
 		ShowDisassembly,
 		NewBreakpoint,
 		RemoveBreakpoint,
-		ShowBreakpointProperties
+		ShowBreakpointProperties,
+		ExpressionEvaluator
 	}
 	
 	internal class DebugApplicationHandler: CommandHandler
@@ -311,6 +312,27 @@ namespace MonoDevelop.Ide.Commands
 			}
 			else
 				info.Enabled = false;
+		}
+	}
+
+	internal class ExpressionEvaluatorHandler: CommandHandler
+	{
+		protected override void Run ()
+		{
+			ExpressionEvaluatorDialog dlg = new ExpressionEvaluatorDialog ();
+			try {
+				if (dlg.Run () == (int) Gtk.ResponseType.Ok) {
+					
+				}
+			}
+			finally {
+				dlg.Destroy ();
+			}
+		}
+		
+		protected override void Update (CommandInfo info)
+		{
+			info.Enabled = IdeApp.Services.DebuggingService.IsDebugging;
 		}
 	}
 }
